--- a/styles.css
+++ b/styles.css
@@ -1,253 +1,24 @@
-body{
-  text-align:center;
-  width:1240px;
+*{
+    padding:0;
+    margin :0;
+    text-decoration: none;
+    box-sizing: border-box;
+
 }
+body{
+    font-family: montserrat;
 
-@media (max-width:360px)
-{
-    
-        body{
-            width: 360px;
-            margin-left: auto;
-        }
-        label.cls1{
-            font-size: 30px;
-            padding-left: 50px;
-        }
-        nav ul li a{
-            font-size: 16px;
-    
-        }
-        .top-container{
-            display: grid;
-            width: 300px;
-            position: relative;
-            
-        }
-        .h3{
-            flex-direction: column;
-            flex-shrink:inherit ;
-            width:100px;
-            height: 10px;
-        }
-        .dp{
-            flex-direction: column;
-            margin-top: 280px;
-            width:7rem;
-            height: 30rem;
-             left:50px;
-            
-        }
-        .logo{
-           
-            height: 200rem;
-            background-color: hidden;
-            
-        }
-        
-        .logsize{
-            display: grid;
-            height: 300px;
-        }
-        .middle-container{
-            display: grid;
-            box-sizing: content-box;
-            width:200px;
-            height:700px;
-            right:700px;
-           
-        }
-        .touch{
-            width:7rem;
-            height: 30rem;
-            left:650px;
-        }
-        .head{
-            position: relative;
-            left:550px;
-        }
-        .didi{
-            
-            position: relative;
-            bottom: 300px;
-            left:30px;
-        }
-        .bottom-container{
-            padding-top: 100px;
-            flex-direction: column;
-        }
-        .UI{
-            position: relative;
-            float:inline-start;
-            width:300px;
-            margin-right:300px;
-        }
-        .second{
-            position: relative;
-            float:inline-start;
-            width:300px;
-            margin-right:300px;
-        }
-        .third{
-            position: relative;
-            float:inline-start;
-            width:300px;
-            margin-right:300px;
-        }
-        .container{
-           
-            width: 300px;
-            position: relative;
-            display: grid;
-            
-            flex-direction: column;
-            size-adjust:inherit;
-           
-        }
-        .testi{
-            text-align: center;
-           
-        }
-        
-        .last{
-            position: relative;
-            flex-direction: column;
-            display: grid;
-            margin-top: 2100px;
-            
-            right:50px;
-        }
-        .word2{
-            position: relative;
-            width:200px;
-            flex-direction: column;
-            display: grid;
-            float: inline-start;
-           
-        }
-        .end{
-            height: 1500px;
-            position: relative; 
-            display: grid;
-            width: 450px;
-            
-            
-            
-        }
-        .word{
-            position: relative;
-            width:300px;
-            
-            
-        }
-        .a{
-            width:200px;
-            height: 700px;
-            right:20px;
-           
-        }
-        .forms{
-            position: relative;
-            width:200px;
-            height: 200px;
-            top:50px;
-            margin-left: 270px;
-        }
-        .final{
-            position: relative;
-            flex-direction: column;
-            width:500px;
-            
-        }
-        .aura1{
-            position: relative;
-            left: 200px;
-            margin-right:700px;
-        }
-        .flw{
-            position: relative;
-            right:450px;
-            width:200px;
-        }
-        .divi{
-            position: relative;
-            bottom:40px;
-            margin-right: 1700px;
-        }
-    
-        
-        
-    
-        
-    }
-    .checkbtn{
-        font-size: 30px;
-        
-        color: #0f67cc;
-        float: right;
-        line-height: 80px;
-        margin-right: 40px;
-        cursor: pointer;
-        display: none;
-    }
-    #check{
-
-        display: none;
-
-    }
-    @media (max-width:952px) {
-        label.cls1{
-            font-size: 30px;
-            padding-left: 50px;
-
-        }
-        nav ul li a{
-            font-size: 16px;
-        }
-    }
-    @media (max-width:852px){
-        .checkbtn{
-            display: block;
-
-        }
-        ul{
-            position:relative;
-            width: 100%;
-            height: 100vh;
-            left: 0;
-            top: 80px;
-            background-color: white;
-            text-align: center;
-            transition: all .5s;
-        }
-
-        nav ul li{
-            display: block;
-            margin: 50px 0;
-            line-height: 30px;
-        
-        }
-       
-        #check:checked ~ ul{
-            left: 0;
-    
-        }
-    }
-
-    
-    
-
+}
 nav{
-    background-color: rgb(12, 165, 135);
+    background-color: rgb(25, 196, 238);
     height: 80px;
     width: 100%;
 }
-
 label.cls1{
 
     color:black;
     font-size: 35px;
-    line-height: 50px;
+    line-height: 80px;
     padding: 0 100px;
     font-weight: bold;
 }
@@ -261,7 +32,7 @@ nav ul li{
     margin: 0 5px;
 }
 nav ul li a{
-    color: black;
+    color: white;
     font-size: 17px;
     text-transform: uppercase;
     padding: 7px 13px;
@@ -269,369 +40,36 @@ nav ul li a{
 }
 .checkbtn{
     font-size: 30px;
-    color: black;
+    color: rgb(253, 251, 251);
     float: right;
     line-height: 80px;
-    margin-right: 40px;
+    margin-right: 40 px;
     cursor: pointer;
     display: none;
 }
 #check{
     display: none;
 }
+.fistdiv{
+    
+    text-align: center;
+    width: 100%;
+    font-size: 100%;
+    text-overflow:initial ;
+}
+.dp{
+    width: 30%;
+    height: 9%;
+    border-radius:100% ;
+    float: right;
+}
+.intro{
+    position: relative;
+    top: 200px;
+}
 span{
     color:#07F;
 }
-
-.top-container{
-    position: static;
-    text-align: left;
-    
-    
-    padding-left: 90px;
-    padding-top: 90px;
-    font-size: larger;
-}
-
-.dp{
-    position:relative;
-    border-radius: 300px;
-    width:400px;
-    float:left;
-   
-}
-
-.middle-container{
-    position: relative;
-    top:100px;
-    
-    
-
-}
-.bottom-container{
-    position: relative;
-    margin-top:300px ;
-    
-}
-.touch{
-    position: relative;
-    border-radius: 300px;
-    width: 627.91px;
-    height: 623px;
-    float:left;
-}
-.arrow1{
-    border-radius: 50px;
-    background-color: #000000;
-     float: right;
-    width: 50px;
-    height: 50px;
-    rotate:180deg;
-}
-
-.arrow2{
-    position: relative;
-    border-radius:50px;
-    width: 50px;
-    height: 50px;
-    float:right;
-    background-color: blue;
-    rotate: 180;
-    
-}
-.img{
-   
-    padding-right: 60%;
-    color:white;
-}
-.ar1{
-    rotate: 180deg;
-}
-.UI{
-    position: relative;
-    border-radius: 40px;
-    background-color: rgb(9, 73, 191);
-    width:306px;
-    height: 300px;
-    display: inline-block;
-    color:white;
-    top:100px;
-    padding: 10px;
-    left:70px;
-
-    
-}
-.second{
-    width:306px;
-    height: 300px;
-    position: relative;
-    border-radius: 40px ;
-    display: inline-block;
-    top:100px;
-    left:70px;
-    border:1px solid blue;
-}
-.third{
-    width:306px;
-    height: 300px;
-    position: relative;
-    border-radius: 40px ;
-    display: inline-block;
-    top:100px;
-    border:1px solid blue;
-    left:70px;
-}
-.container{
-    position: relative;
-    top:200px;
-    padding:30px;
-    background-color: rgb(9, 73, 191);
-    color:white;
-    text-align: center;
-    left:50px;
-}
-.one{
-    position: relative;
-    left:30px;
-    width:200px;
-    height: 100px;
-    background-color: white;
-    color: rgb(61, 58, 58);
-    padding:30px;
-    border-radius: 30px;
-    display:inline-block;
-    
-}
-.two{
-    position: relative;
-    left:30px;
-    width:200px;
-    height: 100px;
-    background-color: white;
-    color: rgb(61, 58, 58);
-    padding:30px;
-    border-radius: 30px;
-    display:inline-block;
-
-}
-.three{
-    position: relative;
-    left:30px;
-    width:200px;
-    height: 100px;
-    background-color: white;
-    color: rgb(61, 58, 58);
-    padding:30px;
-    border-radius: 30px;
-    display:inline-block;
-}
-.four{
-    position: relative;
-    left:30px;
-    width:200px;
-    height: 100px;
-    background-color: white;
-    color: rgb(61, 58, 58);
-    padding:30px;
-    border-radius: 30px;
-    display:inline-block;
-}
-.word{
-    text-align: center;
-    position: relative;
-    left:20px;
-    top:200px;
-    line-height: 50px;
-  }
-  .image{
-    width:300px;
-    height: 300px;
-    column-gap: 300px;
-    position: relative;
-    
-}
-
-.word2{
-    position: relative;
-    
-    height: 900px;
-    line-height: 30px;
-    column-gap: 30px;
-    left: 20px;
-    padding: 50px;
-    
-}
-.last{
-    text-align: center;
-    left:50px;
-    margin-left: 70px;
-}
-.per1{
-    padding:20px;
-    width:200px;
-    height:400px;
-    border:1px solid rgb(7, 103, 205);
-    display:inline-block;
-    left:40px;
-    border-radius: 30px;
-    margin-bottom:100px ;
-}
-.per2{
-    border-radius: 30px;
-    padding:20px;
-    width:200px;
-    height:400px; 
-    background-color: rgb(9, 73, 191);
-    display:inline-block;
-    margin-bottom:100px ;
-}
-.lpic{
-    
-    border-radius: 50%;
-}
-.end{
-    background-color: rgb(9, 73, 191);
-    position: relative;
-    padding: 10px 30px;
-    
-    color: white;
-    line-height: 30px;
-    left:40px;
-}
-.a{
-    background-color: white;
-    color: black;
-    padding: 20px;
-    width: 450px;
-    height: 300px;
-    text-align: left;
-    position: relative;
-    border-radius: 30px;
-}
-.forms{
-    position: relative;
-    height: 300px;
-    float: inline-end;right:300px;
-    bottom:330px;
-    width:300px;
-    
-    
-}
-.name{
-    border-radius: 5px;
-    width:250px;
-    height: 50px;
-}
-.help{
-    border-radius: 5px;
-    width:500px;
-    height: 50px;
-}
-.b{
-    width: 500px;
-    height: 190px;
-    border-radius: 5px;
-}
-.col{
-    color:white;
-}
-.aura{
-    display:inline-block;
-    position: relative;
-    margin-top:300px;
-    right: 100px;
-   
-    
-}
-.aura1{
-    position: relative;
-    left:200px;
-    display:inline-block;
-   text-align: center;
-}
-.aura2{
-    display:inline-block;
-    position: relative;
-    right: 419px;
-    bottom: 8px;
-}
-.cls2{
-    display:inline-block;
-    position: relative;
-    right: 4px;
-    top:10px;
-}
-.logo{
-   
-    display: inline-block;
-    position: relative;
-    height: 100px;
-    left:30px;
-    padding:30px 100px 0 100px;
-    top:50px;
-  
-}
-.logsize{
-    display: inline-block;
-    width:200px;
-    height: 50px;
-}
-.skill{
-    text-align:right;
-    background-color: rgb(94, 93, 93);
-    border-radius: 40px;
-    width:50%;
-    position: relative;
-    left:700px;
-}
-.ui{
-    width:95%;
-    background-color: #0f67cc;
-    padding-top:10px;
-    padding-bottom: 10px;
-    border-radius: 40px;
-}
-.design{
-        width: 55%;
-        background-color: #0f67cc;
-        padding-top:10px;
-        padding-bottom: 10px;
-        border-radius: 40px;
-}
-.web{
-    width:75%;
-    background-color: #0f67cc;
-    padding-top:10px;
-    padding-bottom: 10px;
-    border-radius: 40px;
-
-}
-
-
-.icon{
-    display:inline-block;
-    position: relative;
-    left:300px;
-}
-
-.reg{
-    font-size: larger;
-    background-color: #144072 ;
-    color:white;
-    width:150px;
-    height: 50px;
-    border-radius: 50px;
-}
-.divi{
-    display: inline-block;
-    width:100px;
-    height: 50px;
-    
-    font-size: larger;
-    position: relative;
-    left:300px;
-}
-
 .btn {
     background: hsl(196, 68%, 53%);
     background-image: -webkit-linear-gradient(top, #34add9, #3076a1);
@@ -650,8 +88,7 @@ span{
   }
   
   
-  
-  .btn:hover {
+.btn:hover {
     background: #3cb0fd;
     background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
     background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
@@ -687,3 +124,277 @@ span{
     background-image: linear-gradient(to bottom, #f4f6f7, #3498db);
     text-decoration: none;
   }
+.logo{
+    display: inline-block;
+    position: relative;
+    background-color: papayawhip;
+    top: 60px;
+
+}
+.logsize{
+    display: inline-block;
+    width:19%;
+}
+.skill{
+    text-align:right;
+    background-color: rgb(94, 93, 93);
+    border-radius: 40px;
+    width:50%;
+    position: relative;
+    left:700px;
+}
+.ui{
+    width:95%;
+    background-color: #0f67cc;
+    padding-top:10px;
+    padding-bottom: 10px;
+    border-radius: 40px;
+}
+.design{
+        width: 55%;
+        background-color: #0f67cc;
+        padding-top:10px;
+        padding-bottom: 10px;
+        border-radius: 40px;
+}
+.web{
+    width:75%;
+    background-color: #0f67cc;
+    padding-top:10px;
+    padding-bottom: 10px;
+    border-radius: 40px;
+
+}
+.secdiv{
+   position: relative;
+   top:100px;
+   width:100%;
+   line-height: 60px;
+   text-align: center;
+
+}
+.touch{
+    width: 35%;
+    height: 9%;
+    float: right;
+    border-radius: 100%;
+}
+.trddiv{
+    margin-top:250px;
+    text-align: center;
+}
+.arrow1{
+    border-radius: 50px;
+    background-color: #000000;
+     float: right;
+    width: 50px;
+    height: 50px;
+    rotate:180deg;
+}
+
+.arrow2{
+    position: relative;
+    border-radius:50px;
+    width: 50px;
+    height: 50px;
+    float:right;
+    background-color: blue;
+    rotate: 180;
+    
+}
+.step{
+    width: 80%;
+    margin-left: 15%;
+   
+}
+.UI{
+    margin-top: 50px;
+    display: inline-block;
+    color:white;
+    border-radius: 40px;
+    background-color: rgb(9, 73, 191);
+    width:306px;
+    height: 300px;
+    padding: 15px;
+   
+   
+    
+}
+.second{
+    margin-top: 50px;
+    display: inline-block;
+    color:rgb(19, 18, 18);
+    border-radius: 40px;
+    border:1px solid blue;
+    width:306px;
+    height: 300px;
+    margin-left: 4px;
+    padding: 15px;
+   
+}
+.third{
+    margin-top: 50px;
+    display: inline-block;
+    color:rgb(19, 18, 18);
+    border-radius: 40px;
+    border:1px solid blue;
+    width:306px;
+    margin-left: 4px;
+    height: 300px;
+    padding: 15px;
+}
+.container{
+    width: 99%;
+    position: relative;
+    top:200px;
+    padding:30px;
+    background-color: rgb(9, 73, 191);
+    color:white;
+    text-align: center;
+    left:3px;
+    
+}
+
+.one{
+    position: relative;
+    left:30px;
+    width:200px;
+    height: 150px;
+    background-color: white;
+    color: rgb(61, 58, 58);
+    padding:30px;
+    border-radius: 30px;
+    display:inline-block;
+    line-height: 20px;
+    
+}
+
+.two{
+    position: relative;
+    left:30px;
+    width:200px;
+    height: 150px;
+    background-color: white;
+    color: rgb(61, 58, 58);
+    padding:30px;
+    border-radius: 30px;
+    display:inline-block;
+    line-height: 20px;
+
+
+}
+.three{
+    position: relative;
+    left:30px;
+    width:200px;
+    height: 150px;
+    background-color: white;
+    color: rgb(61, 58, 58);
+    padding:30px;
+    border-radius: 30px;
+    display:inline-block;
+    line-height: 20px;
+}
+.four{
+    position: relative;
+    left:30px;
+    width:200px;
+    height: 150px;
+    background-color: white;
+    color: rgb(61, 58, 58);
+    padding:30px;
+    border-radius: 30px;
+    display:inline-block;
+    line-height: 20px;
+}
+
+
+
+
+
+
+
+
+
+@media (max-width: 952px)
+{
+    label.cls1{
+        font-size: 30px;
+        padding-left: 50px;
+    }
+    nav ul li a{
+        font-size: 16px;
+
+    }
+}
+@media (max-width :858px) {
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2e2e2e;
+        left :100%;
+        text-align: center;
+        top: 80px;
+        transition: all.5s;
+
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+
+    nav  ul li a{
+        font-size:20px ;
+    }
+    #check:checked ~ ul{
+        left:0;
+
+    }
+    .dp{
+        width: 50%;
+        float: none;
+        
+    }
+    .fistdiv{
+        display: block;
+    }
+    .logo{
+        background-color: white;
+        margin-top:400px;
+        padding: 15%;
+        display: block;
+    .logsize{
+        
+        width:90%;
+    }
+    .touch{
+        float:none;
+        width: 100%;
+       
+    }
+    .secdiv{
+        width: 100%;
+        display: block;
+        text-align: center;
+    }
+    .container
+    {
+        display: block;
+        position: relative;
+      
+    }
+  
+    
+    
+    
+    
+}
+section{
+    background-size: cover;
+    height: calc(100vh - 80px);
+}
