--- a/styles.css
+++ b/styles.css
@@ -256,6 +256,7 @@ span{
 }
 
 .one{
+    top:30px;
     position: relative;
     left:30px;
     width:200px;
@@ -270,6 +271,8 @@ span{
 }
 
 .two{
+   
+    top:30px;
     position: relative;
     left:30px;
     width:200px;
@@ -284,6 +287,7 @@ span{
 
 }
 .three{
+    top:45px;
     position: relative;
     left:30px;
     width:200px;
@@ -293,9 +297,9 @@ span{
     padding:30px;
     border-radius: 30px;
     display:inline-block;
-    line-height: 20px;
 }
 .four{
+    top:30px;
     position: relative;
     left:30px;
     width:200px;
@@ -385,7 +389,7 @@ span{
     .container
     {
         display: block;
-        position: relative;
+        
       
     }
   
